--- a/RegNew/Student/css/style.css
+++ b/RegNew/Student/css/style.css
@@ -110,7 +110,15 @@ svg {
         margin-top: 15%;
         box-shadow: 0px 0px 20px 2px #FF0059;
         border:0px;
-        font-size: 20px;
+        font-size: 15px;
     }
     
+}
+@media (max-width:360px){
+  #a1{
+    margin-left: -30%;
+  }
+  #adc{
+    font-size: 15px;
+  }
 }
