--- a/REGISTERv1.0/css/main.css
+++ b/REGISTERv1.0/css/main.css
@@ -55,6 +55,7 @@ th{
 td{
      padding: 10px 30px 10px 30px ;
     text-align: center;
+    background-color: white;
 }
 tr:nth-child(even){
     background-color: #eee;
